--- a/clipmask/index.html
+++ b/clipmask/index.html
@@ -2,8 +2,24 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+  <style>
+    .sem-repeat,
+    .com-repeat {
+      background-color: red;
+      width: 100px;
+      height: 100px;
+      mask: url(ic_cached_black_24px.svg);
+    }
+
+    .sem-repeat {
+      mask-repeat: no-repeat;
+    }
+
+    .com-canvas {
+      width: 50px;
+      height: 50px;
+    }
+  </style>
 </head>
 
 <body>
