--- a/clipmask/index.html
+++ b/clipmask/index.html
@@ -26,7 +26,7 @@
   <img src='ic_cached_black_24px.svg'/>
   <div class='sem-repeat'></div>
 
-  <div class='com-repeat' style=''></div>
+  <div class='com-repeat'></div>
 
   <div class='com-canvas'></div>
 </body>
