--- a/clipmask/index.html
+++ b/clipmask/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <style>
+  <style type='text/css'>
     .sem-repeat,
     .com-repeat {
       background-color: red;
@@ -23,12 +23,11 @@
 </head>
 
 <body>
-  <img src='ic_cached_black_24px.svg'/>
   <div class='sem-repeat'></div>
 
-  <div class='com-repeat'></div>
+<div class='com-repeat'></div>
 
-  <div class='com-canvas'></div>
+<div class='com-canvas'></div>
 </body>
 
 </html>
