--- a/clipmask/index.html
+++ b/clipmask/index.html
@@ -8,10 +8,12 @@
       background-color: red;
       width: 100px;
       height: 100px;
-      mask: url(https://storage.googleapis.com/material-icons/external-assets/v4/icons/svg/ic_accessibility_black_24px.svg);
+      -webkit-mask: url(ic_cached_black_24px.svg);
+      mask: url(ic_cached_black_24px.svg);
     }
 
     .sem-repeat {
+      -webkit-mask-repeat: no-repeat;
       mask-repeat: no-repeat;
     }
 
